@@ -1,6 +1,6 @@
 #This is the app.py file that has various functions attached to the application route
 
-from flask import Flask, render_template
+from flask import Flask, render_template, request, jsonify
 import speech_recognition as sr
 import speak, pyglet, time, os
 
@@ -15,7 +15,8 @@ def dummytext():
     return render_template('base.html')
 
 
-@app.route("/<int:value>")
+@app.route("/", defaults={'value':0})
+@app.route("/<int:value>", methods=['GET','POST'])
 def speech_to_text(value):
 
     # This function displays an .html page when the application starts
@@ -24,9 +25,15 @@ def speech_to_text(value):
     #print dummy text
     #dummytext()
 
+    if request.method == 'POST':
+        message = request.form['message']
+        #value = request.form['value']
+        print (message, ' ' , value)
+
     # Value = 1 is when the microphone will switch on else, it will return the standard text which is 'Say something'
     if (value == 1):
     # Now get the user input
+        print ("I am executed")
         with sr.Microphone() as source:
             r.adjust_for_ambient_noise(source, duration=1)
             audio = r.listen(source)
@@ -40,7 +47,8 @@ def speech_to_text(value):
                 #play_audio_file(pathname)
                 #speak.tts(text, lang='en')
 
-                return render_template('index.html', message=text)
+                #return render_template('index.html', message=text)
+                return jsonify(message=text)
 
             except Exception as e:
                 return render_template('index.html', message='Something went wrong! ' + str(e))
