@@ -4,9 +4,10 @@
     <title>Speech Recognition Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="main-container">
         <!-- the parameters from server side are called in the client side using the below syntax -->
 
     <!-- custom block  that can be overriden in the child templates-->
@@ -15,8 +16,8 @@
         {% endblock content %}
     </div>
 
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="../static/js/script.js"></script>
     <!-- call the function here -->
   </body>
 
