@@ -6,4 +6,5 @@ v1                  Initial version
 --------------------------------------------
 v2                  Based on the URL value 1 or 0, the microphone picks up the voice; before that the index page is loaded fully
 --------------------------------------------
-
+v3                  Using async javascript, bind the keyboard events to server and switch on / off microphone accordingly
+--------------------------------------------
